--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,6 @@
 *.iws
 .idea/
 
-# Visual Studio Code related
-.vscode/
-
 # Flutter/Dart/Pub related
 **/doc/api/
 .dart_tool/
@@ -70,3 +67,5 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 .fvm/flutter_sdk
+.flutter-plugins-dependencies
+*.g.dart
