Window to uncover image implemented. Added color style and screen utils

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
-        "habitquokka"
+        "habitquokka",
+        "nullsafety",
+        "repos",
+        "screenutil"
     ],
     "dart.flutterSdkPaths": [
         ".fvm/flutter_sdk"
