--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,12 @@ dependencies:
   async_redux:
   equatable:
   copy_with_extension: ^2.0.0-nullsafety.1
+  supercharged:
 
   # UI
   cached_network_image: ^3.0.0-nullsafety
+  flex_color_scheme: ^2.0.0-nullsafety.1
+  flutter_screenutil: ^5.0.0-nullsafety.7
 
 dev_dependencies:
   flutter_test:
