Added navigation with Beamer, updated dependencies, fixed README.md formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
-    "cSpell.words": [
-        "habitquokka",
-        "nullsafety",
-        "repos",
-        "screenutil"
+    "cSpell.words": [],
+    "cSpell.enableFiletypes": [
+        "!yaml"
     ],
     "dart.flutterSdkPaths": [
         ".fvm/flutter_sdk"
-    ]
+    ],
 }
