--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,15 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
+-   repo: local
+    hooks:
+    -   id: sort-imports
+        name: sort imports
+        entry: ./sort_imports.sh
+        language: system
+        files: ^lib/
 -   repo: https://github.com/dluksza/flutter-analyze-pre-commit
     rev: "0bfdb7415bb2d02794a884bf2b763a92772001eb"
     hooks:
     -   id: flutter-analyze
--   repo: https://github.com/fluttercommunity/import_sorter
-    rev: "3e781c5afe3f28ce5c1685470543e6ca46a19aa2"   
-    hooks:
-    -   id: flutter-import-sorter
--   repo: https://github.com/Cretezy/flutter-format-pre-commit
-    rev: "4a1df675bb74dea371c17934933e257e46f8dd98"
-    hooks:
-    -   id: flutter-format
 
