--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ version: 0.0.1+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: 2.0.0
+  flutter: 2.0.1
 
 dependencies:
   flutter:
@@ -41,6 +41,9 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/blobs/
 
 flutter_intl:
   enabled: true
